[fix] 메뉴 호출 순서 정렬 추가